# purge_of_dark_shadow

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/Engine/: assets.h  image_loader.h  imgui_renderer.h  json.hpp  mesh.h  renderer.h  settings.h  textures.h  utils.h
include/Engine/renderer/: renderer.h
include/Engine/renderer/directx/: dx11_api.h  dx_image.h
include/Engine/renderer/vulkan/: cmd_buff.h  vk_buff.h  vk_buffer.h  vk_cmd.h  vk_descriptor.h  vk_image.h  vk_mem_alloc.h  vk_pipeline.h  vk_texture.h  vk_utils.h  vulkanApi.h  vulkan_api.h  vulkan_utils.h
include/Game/: game.h  game_settings.h  sandbox.h
resources/assets/Chandelier/: Chandelier_03_1k.gltf
resources/assets/Chandelier_02/: Chandelier_02_1k.gltf
resources/assets/GothicCabinet_01/: GothicCabinet_01_1k.gltf
resources/assets/dining_chair/: dining_chair_02_1k.gltf
resources/assets/industrial_wall_sconce/: industrial_wall_sconce_1k.gltf
resources/cache/textures/wood_cabinet_worn_long/: wood_cabinet_worn_long_arm_1k.ktx  wood_cabinet_worn_long_diff_1k.ktx  wood_cabinet_worn_long_disp_1k.ktx  wood_cabinet_worn_long_nor_gl_1k.ktx
resources/scenes/: game_settings.json
shaders/: imgui.frag  imgui.vert  triangle.hlsl
shaders/hlsl/: triangle.hlsl
shaders/spvs/: main.spv  triangle.spv
src/: main.cpp
src/Engine/: assets.cpp  image_loader.cpp  imgui_renderer.cpp  mesh.cpp  settings.cpp  stbi_image.cpp  stbi_impl.cpp  textures.cpp  utils.cpp
src/Engine/renderer/: renderer.cpp  vma_implementation.cpp
src/Game/: game.cpp  game_settings.cpp  sandbox.cpp
(+15 files in other folders)
